# AirSoftGame

./: .gitmodules  CMakeLists.txt  client.cpp  client.h  librg_compile.c  lighting_fs.h  lighting_vs.h  main.cpp  server.cpp
.github/workflows/: build.yml  release.yml
src/: air_soft.h
src/game/: CMakeLists.txt  air_game.h  game_instance.cpp  game_instance.h  game_player_controller.cpp  game_player_controller.h  game_scene.cpp  game_scene.h  t.cpp
src/graphics/: CMakeLists.txt  air_graphics.h  gra_application.cpp  gra_application.h  gra_genmesh.cpp  gra_genmesh.h  raygui.h
src/graphics/ui/: gra_console.cpp  gra_console.h
src/networking/: CMakeLists.txt  air_net.h  net_enet.cpp  packet.h
src/networking/client/: net_client.cpp  net_client.h
src/networking/server/: net_server.cpp  net_server.h
